--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="C:/Users/Robert/Documents/logback-core-1.1.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Robert/Documents/pircbotx-2.0.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Robert/Documents/slf4j-api-1.7.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Robert/Documents/jyaml-1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
